testsuite/tests/rename/should_fail/T14032c.stderr

T14032c.hs:1:1: error: [GHC-78534]
    Illegal use of the ‘type’ keyword:
      infix 0 $
    in a fixity signature
    Suggested fix: Perhaps you intended to use ExplicitNamespaces

T14032c.hs:1:1: error: [GHC-78534]
    Illegal use of the ‘data’ keyword:
      infix 0 $
    in a fixity signature
    Suggested fix: Perhaps you intended to use ExplicitNamespaces
